--- a/html/index.html
+++ b/html/index.html
@@ -1,100 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Document</title>
 </head>
+
 <body>
     <div id="general">
         <header id="header">
-            <h1>Programing</h1>
+            <h1><span class="titulo">P</span>rograming</h1>
         </header>
         <nav id="menu">
             <ul>
                 <li><a href="#"><span class="material-symbols-outlined">home</span>Menu</a></li>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Ver</a></li>
+                <li><a href="#"><span class="material-symbols-outlined">work</span>Portafolio</a></li>
+                <li><a href="#"><span class="material-symbols-outlined">nightlight_round</span>Dark</a></li>
+                <!--<li><a href="#"><span class="material-symbols-outlined">nightlight_round</span>Dark</a></li>-->
             </ul>
             <div class="clearFix"></div>
         </nav>
         <section id="contenido">
             <h2>Contenido Principal</h2>
-        <div class="caja">
-            <h3>Hello, I box 1</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
-        <div class="caja">
-            <h3>Hello, I box 2</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
-        <div class="caja">
-            <h3>Hello, I box 3</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
-        <div class="caja">
-            <h3>Hello, I box 4</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
-        <div class="caja">
-            <h3>Hello, I box 5</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
-        <div class="caja">
-            <h3>Hello, I box 6</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
-        <div class="caja">
-            <h3>Hello, I box 7</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
-        <div class="caja">
-            <h3>Hello, I box 8</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
-                laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
-            </p>
-        </div>
+            <div class="caja">
+                <h3>Hello, I box 1</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
+            <div class="caja">
+                <h3>Hello, I box 2</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
+            <div class="caja">
+                <h3>Hello, I box 3</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
+            <div class="caja">
+                <h3>Hello, I box 4</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
+            <div class="caja">
+                <h3>Hello, I box 5</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
+            <div class="caja">
+                <h3>Hello, I box 6</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
+            <div class="caja">
+                <h3>Hello, I box 7</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
+            <div class="caja">
+                <h3>Hello, I box 8</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
+                    laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
+                </p>
+            </div>
         </section>
 
         <aside id="lateral">
-            <h3>caja del lateral sidebar</h3>
+            <h3>caja del lateral aside</h3>
             <br>
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, 
+                    Lorem ipsum dolor sit amet consectetur,
                     adipisicing elit. Vero architecto velit a odit laboriosam quo quos aperiam, excepturi delectus
                     laborum iusto temporibus recusandae eos soluta maxime commodi eaque incidunt eligendi.
                 </p>
@@ -102,19 +106,25 @@
             <br>
             <div>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est maiores consequatur ipsum alias, voluptatum, repudiandae rem dolore tenetur in voluptas obcaecati magnam necessitatibus animi inventore eaque delectus vero unde accusamus.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est maiores consequatur ipsum alias,
+                    voluptatum, repudiandae rem dolore tenetur in voluptas obcaecati magnam necessitatibus animi
+                    inventore eaque delectus vero unde accusamus.
                 </p>
             </div>
             <br>
             <div>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est maiores consequatur ipsum alias, voluptatum, repudiandae rem dolore tenetur in voluptas obcaecati magnam necessitatibus animi inventore eaque delectus vero unde accusamus.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est maiores consequatur ipsum alias,
+                    voluptatum, repudiandae rem dolore tenetur in voluptas obcaecati magnam necessitatibus animi
+                    inventore eaque delectus vero unde accusamus.
                 </p>
             </div>
             <br>
             <div>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est maiores consequatur ipsum alias, voluptatum, repudiandae rem dolore tenetur in voluptas obcaecati magnam necessitatibus animi inventore eaque delectus vero unde accusamus.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est maiores consequatur ipsum alias,
+                    voluptatum, repudiandae rem dolore tenetur in voluptas obcaecati magnam necessitatibus animi
+                    inventore eaque delectus vero unde accusamus.
                 </p>
             </div>
         </aside>
@@ -124,4 +134,5 @@
         </footer>
     </div>
 </body>
+
 </html>
